src/objects/ChatterTest__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Post__c</fullName>
        <label>Chatter Post</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field describes if the record has been accepted through a S2S connection.</description>
        <label>Is Accepted</label>
        <type>Checkbox</type>
    </fields>
    <label>ChatterTest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chatter_Post__c</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CHT-{00000}</displayFormat>
        <label>ChatterTest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChatterTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>